[tool.poetry]
name = "pdf-sign"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pyHanko = {extras = ["pkcs11", "image-support", "opentype"], version = "^0.13.2"}
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit-hooks = "^4.3.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
